--- a/Views/AksiUtama/Create.cshtml
+++ b/Views/AksiUtama/Create.cshtml
@@ -23,17 +23,25 @@
                 <div class="mb-3">
                     <label for="" class="form-label">Nama Aksi Utama</label>
                     <input type="text" class="form-control" asp-for="Nama_Aksi_Utama">
-                    <span asp-validation-for="Nama_Aksi_Utama" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3">
                     <label for="" class="form-label">Strategi Kunci</label>
                     <select asp-for="Id_Strategi_Kunci" name="Id_Strategi_Kunci" class="form-select" asp-items="ViewBag.StrategiKuncis"></select>
-                    <span asp-validation-for="Id_Strategi_Kunci" class="text-danger"></span>
                 </div>
 
-                <div class="d-grid gap-2 mt-4">
-                    <button type="submit" class="btn btn-success btn-block text-white"><i class="fa-regular fa-floppy-disk"></i> Submit</button>
+                <div class="row mt-4">
+                    <div class="col-4">
+                        <div class="d-grid gap-2">
+                            <input type="reset" class="btn btn-danger text-white" value="Batal" />
+                        </div>
+                    </div>
+
+                    <div class="col-8">
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-success btn-block text-white"><i class="fa-regular fa-floppy-disk"></i> Tambahkan</button>
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
