--- a/Views/DivisionMember/Index.cshtml
+++ b/Views/DivisionMember/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="container-xl">
         <div class="bgKonten">
             <h1 class="app-page-title mb-4 p-3">
-                Dashboard (Heat Map)
+                Beranda (Heat Map)
 
                 <span class="float-end">
                     <a class="btn btn-success text-white" asp-controller="RegistrasiRisiko" asp-action="Create"><i class="fa-solid fa-plus"></i> Registrasi Proyek</a>
