--- a/Views/KategoriDetailRisiko/Index.cshtml
+++ b/Views/KategoriDetailRisiko/Index.cshtml
@@ -22,7 +22,7 @@
             <table class="table text-center tableNya">
                 <thead>
                     <tr>
-                        <th>Id</th>
+                        <th>ID</th>
                         <th>Nama</th>
                         <th>Aksi</th>
                     </tr>
@@ -41,7 +41,7 @@
                                 <td>@obj.Id_Kategori_Detail_Risiko</td>
                                 <td>@obj.Nama_Kategori_Detail_Risiko</td>
                                 <td>
-                                    <a asp-action="Edit" class="btn btn-warning text-white" asp-route-id="@obj.Id_Kategori_Detail_Risiko"><i class="fa-solid fa-pen-to-square"></i> Edit</a>
+                                    <a asp-action="Edit" class="btn btn-warning text-white" asp-route-id="@obj.Id_Kategori_Detail_Risiko"><i class="fa-solid fa-pen-to-square"></i> UBah</a>
                                     <a asp-action="Delete" class="btn btn-danger text-white" asp-route-id="@obj.Id_Kategori_Detail_Risiko"><i class="fa-solid fa-trash"></i> Hapus</a>
                                 </td>
                             </tr>   
@@ -52,3 +52,43 @@
         </div>
     </div>
 </div>
+
+<script>
+    if ("@TempData["IsDelete"]" != "") {
+        const swalWithBootstrapButtons = Swal.mixin({
+            customClass: {
+                confirmButton: 'btn btn-success mx-3 text-white',
+                cancelButton: 'btn btn-danger mx-3 text-white'
+            },
+            buttonsStyling: false
+        })
+
+        swalWithBootstrapButtons.fire({
+            title: 'Yakin Hapus Data?',
+            text: "Data yang dihapus tidak dapat dikembalikan",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonText: 'Hapus!',
+            cancelButtonText: 'Batal!',
+            reverseButtons: true
+        }).then((result) => {
+            if (result.isConfirmed) {
+                swalWithBootstrapButtons.fire(
+                    'Berhasil!',
+                    'Data berhasil dihapus',
+                    'success'
+                ).then((value) => {
+                    window.location = "@Url.Action("DeleteConfirmed", "KategoriDetailRisiko", new { id = @TempData["ID"] })";
+                });
+            } else if (
+                result.dismiss === Swal.DismissReason.cancel
+            ) {
+                swalWithBootstrapButtons.fire(
+                    'Gagal',
+                    'Data batal dihapus',
+                    'error'
+                )
+            }
+        })
+    }
+</script>
