--- a/Views/RiskManager/Index.cshtml
+++ b/Views/RiskManager/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="app-content pt-3 p-md-3 p-lg-4">
     <div class="container-xl">
-        <div class="bgKonten"><h1 class="app-page-title mb-4 p-3">Dashboard (Heat Map)</h1></div>
+        <div class="bgKonten"><h1 class="app-page-title mb-4 p-3">Beranda (Heat Map)</h1></div>
         <div class="bgKonten">
             <div class="mb-4 p-3">
                 <div class="row">
