--- a/Views/Aktor/Index.cshtml
+++ b/Views/Aktor/Index.cshtml
@@ -55,8 +55,14 @@
                                     }
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" class="btn btn-warning text-white" asp-route-id="@obj.Id_Aktor"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
-                                    <a asp-action="Delete" class="btn btn-danger text-white" asp-route-id="@obj.Id_Aktor"><i class="fa-solid fa-trash"></i> Hapus</a>
+                                    @if (obj.status == "Aktif")
+                                    {
+                                        <a asp-action="Edit" class="btn btn-warning text-white" asp-route-id="@obj.Id_Aktor"><i class="fa-solid fa-pen-to-square"></i> Ubah</a>
+                                        <a asp-action="Delete" class="btn btn-danger text-white" asp-route-id="@obj.Id_Aktor"><i class="fa-solid fa-trash"></i> Hapus</a>
+                                    } else
+                                    {
+                                        <p>Status Tidak Aktif</p>
+                                    }
                                 </td>
                             </tr>   
                         }
